# poly-rush

./: .env.example  .gitignore  COMMANDS.md  Cargo.toml  README.md  RESEARCH.md  TRINITY_PLAN.md  install-rust.bat
.cargo/: config.toml
analysis_output/: trinity_report.md  wallet_report.md
scripts/: trinity_analysis.py  trinity_final_analysis.py  wallet_drilldown.py  wallet_forensics.py
src/: bilateral.rs  book_state.rs  cex_feed.rs  config.rs  fees.rs  gamma.rs  lib.rs  live.rs  live_runner.rs  main.rs  poly_ws.rs  pricing_model.rs  recorder.rs  runner.rs  tp_manager.rs  trinity_runner.rs  types.rs
src/strategies/: bilateral_pure.rs  hybrid.rs  lag_arb.rs  mod.rs
tests/: integration_detector.rs
